--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^8.2.0"
+  },
+  "dependencies": {
+    "express-graphql": "^0.9.0",
+    "lodash": "^4.17.15",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7"
   }
 }
