implemented login system

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "express-graphql": "^0.9.0",
+    "express-session": "^1.17.0",
+    "flatted": "^2.0.2",
+    "graphql-passport": "^0.6.3",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "nodemon": "^2.0.3",
+    "passport": "^0.4.1"
   }
 }
