Setup testing directory

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "",
+    "test": "mocha tests/*_test.js",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -13,11 +13,15 @@
     "dotenv": "^8.2.0"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "easygraphql-tester": "^5.1.6",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
     "flatted": "^2.0.2",
     "graphql-passport": "^0.6.3",
     "lodash": "^4.17.15",
+    "mocha": "^7.1.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.3",
