--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "easygraphql-tester": "^5.1.6",
     "express-graphql": "^0.9.0",
