--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
