--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.1.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
