--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha tests/*_test.js --exit",
+    "test": "nyc mocha tests/**/*_test.js --exit",
     "start": "nodemon index.js"
   },
   "author": "",
