--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.1.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
