--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.1.0",
     "react-router": "^5.1.2",
